--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,49 @@
-# Credenziali Google
+# Credenziali e file sensibili
 credentials.json
-*.json
+*.key
+*.pem
+.env
 
 # Cache Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Ambiente virtuale
+# Virtual environment
 venv/
 env/
 ENV/
 
-# Log
-*.log
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# File temporanei
+# Logs
+*.log
+logs/
+
+# OS
 .DS_Store
 Thumbs.db
+
+# Render
+.render-buildlogs/
