--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==2.3.3
-flask-cors==4.0.0
-gunicorn==21.2.0
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.108.0
-google-cloud-storage==2.10.0 
-pytz==2023.3
+Flask>=2.3.0
+flask-cors>=4.0.0
+gunicorn>=21.0.0
+google-auth>=2.20.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.100.0
+google-cloud-storage>=2.10.0
+pytz>=2023.3
