Fix: Rimuovere completamente Dockerfile e forzare runtime Python
- Rimosso Dockerfile dal repository per evitare che Render lo usi
- Cambiato dockerfilePath da null a stringa vuota per forzare Python runtime
- Questo dovrebbe risolvere il problema del runtime Docker su Render

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
-    dockerfilePath: null  # Forza l'uso del runtime Python invece di Docker
+    dockerfilePath: ""  # Forza l'uso del runtime Python invece di Docker
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
