Fix: Correggere branch da main a master nel render.yaml
- Cambiato branch da 'main' a 'master' per corrispondere al branch locale
- Questo dovrebbe permettere a Render di rilevare le modifiche e avviare il deploy

--- a/render.yaml
+++ b/render.yaml
@@ -17,4 +17,4 @@ services:
         sync: false  # Questa variabile deve essere impostata manualmente nel dashboard di Render
     healthCheckPath: /
     autoDeploy: true
-    branch: main
+    branch: master
