Fix: Rimuovere completamente configurazione Docker e forzare Python runtime
- Rimosso dockerfilePath dal render.yaml per evitare conflitti
- Aggiunto .dockerignore per impedire a Render di rilevare Docker
- Questo dovrebbe forzare definitivamente l'uso del runtime Python

--- a/render.yaml
+++ b/render.yaml
@@ -5,16 +5,15 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
-    dockerfilePath: ""  # Forza l'uso del runtime Python invece di Docker
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: PORT
         value: 8080
       - key: GOOGLE_CREDENTIALS
-        sync: false  # Questa variabile deve essere impostata manualmente nel dashboard di Render
+        sync: false
       - key: SPREADSHEET_ID
-        sync: false  # Questa variabile deve essere impostata manualmente nel dashboard di Render
+        sync: false
     healthCheckPath: /
     autoDeploy: true
     branch: master
